--- a/build.gradle
+++ b/build.gradle
@@ -34,11 +34,13 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'io.cloudevents:cloudevents-kafka:2.4.0'
 	implementation 'io.cloudevents:cloudevents-json-jackson:2.4.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
