--- a/build.gradle
+++ b/build.gradle
@@ -27,18 +27,19 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.flywaydb:flyway-core'
+//	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation 'org.springframework.cloud:spring-cloud-stream'
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'io.cloudevents:cloudevents-kafka:2.4.0'
 	implementation 'io.cloudevents:cloudevents-json-jackson:2.4.0'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'io.cloudevents:cloudevents-spring:2.4.0'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
-	runtimeOnly 'org.postgresql:postgresql'
+//	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
