--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'io.cloudevents:cloudevents-kafka:2.4.0'
 	implementation 'io.cloudevents:cloudevents-json-jackson:2.4.0'
-	implementation 'io.cloudevents:cloudevents-spring:2.4.0'
+//	implementation 'io.cloudevents:cloudevents-spring:2.4.0'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
