--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-stream'
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
 	implementation 'org.springframework.kafka:spring-kafka'
-	implementation 'io.cloudevents:cloudevents-kafka:2.4.0'
+	implementation 'org.springframework.cloud:spring-cloud-function-web'
+//	implementation 'io.cloudevents:cloudevents-core:2.4.0'
+//	implementation 'io.cloudevents:cloudevents-kafka:2.4.0'
 	implementation 'io.cloudevents:cloudevents-json-jackson:2.4.0'
 //	implementation 'io.cloudevents:cloudevents-spring:2.4.0'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
