--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,9 +2,17 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: watcher
+  description: |
+    Watcher is an open-source cloud stream Kafka consumer and publisher app.
+    links:
+    - title: SIT-Website
+      url: http://google.com
+    - title: Documentation
+      url: https://sharepoint-link.com
   annotations:
-    param1: test1
-    param2: test2
+    github.com/project-slug: SagarPrasad/watcher
+    backstage.io/techdocs-ref: dir:.
+    lighthouse.com/website-url: https://backstage.io
 spec:
   type: website
   lifecycle: experimental
@@ -13,7 +21,6 @@ spec:
     - watcher-api
 
 ---
-
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
