--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,7 +69,7 @@ nav:
           - Writing Templates (Legacy): 'features/software-templates/legacy.md'
           - Migrating from v1alpha1 to v1beta2 templates: 'features/software-templates/migrating-from-v1alpha1-to-v1beta2.md'
       - Backstage Search:
-          - Overview: 'features/search/README.md'
+          - Overview: 'features/search/Arch.md'
           - Getting Started: 'features/search/getting-started.md'
           - Getting Started, configuring Backstage: 'features/search/configuration.md'
           - Concepts: 'features/search/concepts.md'
@@ -77,7 +77,7 @@ nav:
           - Search Engines: 'features/search/search-engines.md'
           - HOW TO guides: 'features/search/how-to-guides.md'
       - TechDocs:
-          - Overview: 'features/techdocs/README.md'
+          - Overview: 'features/techdocs/Arch.md'
           - Getting Started: 'features/techdocs/getting-started.md'
           - Concepts: 'features/techdocs/concepts.md'
           - TechDocs Architecture: 'features/techdocs/architecture.md'
