--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,8 +9,8 @@ plugins:
 nav:
   - Overview:
       - What is Backstage?: 'overview/what-is-backstage.md'
-      - Architecture overview: 'overview/architecture-overview.md'
-      - Project Roadmap: 'overview/roadmap.md'
+      - Architecture overview: 'arch/arch.md'
+      - Use Case : 'usecase/usecase.md'
       - Vision: 'overview/vision.md'
       - The Spotify Story: 'overview/background.md'
       - Strategies for adopting: 'overview/adopting.md'
@@ -69,7 +69,7 @@ nav:
           - Writing Templates (Legacy): 'features/software-templates/legacy.md'
           - Migrating from v1alpha1 to v1beta2 templates: 'features/software-templates/migrating-from-v1alpha1-to-v1beta2.md'
       - Backstage Search:
-          - Overview: 'features/search/Arch.md'
+          - Overview: 'features/search/arch.md'
           - Getting Started: 'features/search/getting-started.md'
           - Getting Started, configuring Backstage: 'features/search/configuration.md'
           - Concepts: 'features/search/concepts.md'
@@ -77,7 +77,7 @@ nav:
           - Search Engines: 'features/search/search-engines.md'
           - HOW TO guides: 'features/search/how-to-guides.md'
       - TechDocs:
-          - Overview: 'features/techdocs/Arch.md'
+          - Overview: 'features/techdocs/arch.md'
           - Getting Started: 'features/techdocs/getting-started.md'
           - Concepts: 'features/techdocs/concepts.md'
           - TechDocs Architecture: 'features/techdocs/architecture.md'
