--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
-site_name: 'Backstage'
-site_description: 'Main documentation for Backstage features and platform APIs'
-repo_url: https://github.com/backstage/backstage
-edit_uri: edit/master/docs
+site_name: 'Watcher'
+site_description: 'Main documentation for Watcher Application and platform APIs'
+repo_url: https://github.com/SagarPrasad/watcher
+edit_uri: edit/main/docs
 
 plugins:
   - techdocs-core
